# oogiri-AI

./: .gitignore  pyproject.toml
notebooks/: 01_data_prep.ipynb  02_sft.ipynb  03_dpo.ipynb  test.ipynb
prompt_based/logs/: 20250730_subtask_cc.md
prompt_based/outputs/: 20250730_subtask_cc.md
prompt_based/prompts/: 20250730_subtask_cc.md  20250730_subtask_cc_v2.md  20250806_eval_grpo.md
src/: data.py
